--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <button class="btn" onclick="runGPS()">VERIFY PRESENCE</button>
         <div id="results">READY...</div>
     </div>
+
+    <script src="authority.js"></script>
+
     <script>
         function runGPS() {
             const display = document.getElementById('results');
