--- a/index.html
+++ b/index.html
@@ -3,41 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sovereign Authority Engine</title>
+    <title>SOVEREIGN ENGINE</title>
     <style>
-        body { background-color: black; color: #00FF00; font-family: monospace; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; padding: 20px; text-align: center; }
-        .box { border: 2px solid #00FF00; padding: 20px; max-width: 500px; }
-        .btn { background-color: #00FF00; color: black; border: none; padding: 20px 40px; font-size: 1.2rem; cursor: pointer; font-weight: bold; width: 100%; margin-top: 20px; }
-        #results { margin-top: 25px; color: white; border-top: 1px solid #333; padding-top: 20px; }
+        body { 
+            background: #050505; 
+            color: #00ff41; 
+            font-family: 'Courier New', monospace; 
+            display: flex; flex-direction: column; align-items: center; 
+            justify-content: center; height: 100vh; margin: 0;
+            background-image: linear-gradient(0deg, transparent 24%, rgba(0, 255, 65, .05) 25%, rgba(0, 255, 65, .05) 26%, transparent 27%, transparent 74%, rgba(0, 255, 65, .05) 75%, rgba(0, 255, 65, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(0, 255, 65, .05) 25%, rgba(0, 255, 65, .05) 26%, transparent 27%, transparent 74%, rgba(0, 255, 65, .05) 75%, rgba(0, 255, 65, .05) 76%, transparent 77%, transparent);
+            background-size: 50px 50px;
+        }
+        .container {
+            border: 1px solid #00ff41; padding: 40px; border-radius: 10px;
+            background: rgba(0, 0, 0, 0.9); box-shadow: 0 0 20px rgba(0, 255, 65, 0.2);
+            max-width: 500px; text-align: center;
+        }
+        h1 { font-size: 1.8rem; letter-spacing: 4px; margin-bottom: 10px; }
+        .demand-text { color: #888; font-size: 0.9rem; margin-bottom: 30px; line-height: 1.4; text-align: left; }
+        button { 
+            background: transparent; border: 1px solid #00ff41; color: #00ff41;
+            padding: 15px 30px; font-size: 1rem; cursor: pointer;
+            transition: 0.3s; text-transform: uppercase; letter-spacing: 2px;
+        }
+        button:hover { background: #00ff41; color: #000; box-shadow: 0 0 30px #00ff41; }
+        #out { margin-top: 25px; font-weight: bold; border-top: 1px solid #222; padding-top: 20px; min-height: 60px; }
     </style>
 </head>
 <body>
-    <div class="box">
-        <h1>AUTHORITY ENGINE</h1>
-        <p>Proving physical human presence.</p>
-        <button class="btn" onclick="runGPS()">VERIFY PRESENCE</button>
-        <div id="results">READY...</div>
-    </div>
 
-    <script src="authority.js"></script>
-
-    <script>
-        function runGPS() {
-            const display = document.getElementById('results');
-            display.innerHTML = "LOCATING...";
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition((position) => {
-                    const lat = position.coords.latitude;
-                    const lon = position.coords.longitude;
-                    const time = new Date().toUTCString();
-                    display.innerHTML = `<span style="color:red;font-weight:bold;">VERIFIED</span><br>LAT: ${lat}<br>LON: ${lon}<br>TIME: ${time}`;
-                    alert("SUCCESS\nGPS LOCKED");
-                }, (error) => {
-                    display.innerHTML = "ERROR: ENABLE GPS IN SETTINGS";
-                }, { enableHighAccuracy: true });
-            }
-        }
-    </script>
-</body>
-</html>
-
+<div class="container">
+    <h1>SOVEREIGN ENGINE</h1>
+    <p class="demand-text">
+        <strong>GLOBAL DEMAND:</strong> AI-driven identity fraud is increasing at a rate of 300% annually. Traditional 2FA is obsolete. This engine utilizes a <strong>Biological Handshake</strong>—locking hardware coordinates to real-time human interaction.
+    </p>
+    <button onclick="verify()">Initialize Verification</button>
